修改时间轴，项目部分🚩

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
-  <link rel="icon" href="images/school.jpeg" type="image/x-icon">
+  <link rel="icon" href="images/bnu-logo.png" type="image/x-icon">
   <!-- Stylesheets-->
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Poppins:400,500,600%7CTeko:300,400,500%7CMaven+Pro:500">
@@ -37,10 +37,6 @@
 </head>
 
 <body>
-  <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img
-        src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820"
-        alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a>
-  </div>
   <div class="preloader">
     <div class="preloader-body">
       <div class="cssload-container"><span></span><span></span><span></span><span></span>
@@ -93,7 +89,7 @@
       <section class="section swiper-container swiper-slider swiper-slider-classic" data-loop="true"
         data-autoplay="4859" data-simulate-touch="true" data-direction="vertical" data-nav="false">
         <div class="swiper-wrapper text-center">
-          <div class="swiper-slide" data-slide-bg="images/background/igemnews.png">
+          <div class="swiper-slide" data-slide-bg="images/igemnews.png">
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <h1 data-caption-animate="fadeInLeft" data-caption-delay="0" style="color:white;">比赛信息</h1>
@@ -105,7 +101,7 @@
               </div>
             </div>
           </div>
-          <div class="swiper-slide" data-slide-bg="images/background/team.png">
+          <div class="swiper-slide" data-slide-bg="images/team.png">
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">队伍建设</h1>
@@ -116,7 +112,7 @@
               </div>
             </div>
           </div>
-          <div class="swiper-slide" data-slide-bg="images/background/goldprize.png">
+          <div class="swiper-slide" data-slide-bg="images/goldprize.png">
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <h1 data-caption-animate="fadeInLeft" data-caption-delay="0" style="color:white;">国际金奖</h1>
@@ -267,7 +263,7 @@
                   class="clients-classic" href="https://mp.weixin.qq.com/s/CFSC2y3eDUGbu48WDKiWiw"><img src="images/2021img.jpg" alt="" width="200"
                     height="200" />2021团队</a></div>
               <div class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft" data-wow-delay=".3s"><a
-                  class="clients-classic" href="https://mp.weixin.qq.com/s/P0KqoL3a4-lqlJtCIOS2Cg"><img src="images/2021img.jpg" alt="" width="200"
+                  class="clients-classic" href="https://mp.weixin.qq.com/s/P0KqoL3a4-lqlJtCIOS2Cg"><img src="images/2022img.jpg" alt="" width="200"
                     height="200" />2022团队</a></div>
             </div>
           </div>
@@ -308,60 +304,60 @@
         <div class="row row-sm row-30 justify-content-center side-space">
           <div class="col-md-6 col-lg-4 col-xl-4 wow fadeInRight" data-wow-delay=".3s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="#"><img
+            <article class="team-classic"><a class="team-classic-figure" href="https://cls.bnu.edu.cn/xkjs/szdw/txjs/2839ecc7d47341f393cb8549c1ce0b0f.htm"><img
                   src="images/zhanggenfa.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="#">张根发教授</a></h4>
+                <h4 class="team-classic-name"><a href="https://cls.bnu.edu.cn/xkjs/szdw/txjs/2839ecc7d47341f393cb8549c1ce0b0f.htm">张根发教授</a></h4>
                 <p class="team-classic-status">PI</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="#"><img
+            <article class="team-classic"><a class="team-classic-figure" href="https://cls.bnu.edu.cn/xkjs/szdw/xrjs/jsjsjgjgcs/af7708bc2c42417fa22c49db3d5ca814.htm"><img
                   src="images/xiangbenqiong.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="#">向本琼教授</a></h4>
+                <h4 class="team-classic-name"><a href="https://cls.bnu.edu.cn/xkjs/szdw/xrjs/jsjsjgjgcs/af7708bc2c42417fa22c49db3d5ca814.htm">向本琼教授</a></h4>
                 <p class="team-classic-status">PI</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="#"><img
+            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/xzgl/ecc9148873f24fc293277eba205d636c.htm"><img
                   src="images/wangbo.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="#">汪波老师</a></h4>
+                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/xzgl/ecc9148873f24fc293277eba205d636c.htm">汪波老师</a></h4>
                 <p class="team-classic-status">Instructor</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".2s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="#"><img
+            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/a3868b936c7e4608b5353fcf9e919aee.htm"><img
                   src="images/ansainan.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="#">安赛男老师</a></h4>
+                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/a3868b936c7e4608b5353fcf9e919aee.htm">安赛男老师</a></h4>
                 <p class="team-classic-status">Instructor</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".2s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="#"><img
+            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/9fa21b209cad43b6953b14cd0f447987.htm"><img
                   src="images/shenhongyu.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="#">沈虹宇老师</a></h4>
+                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/9fa21b209cad43b6953b14cd0f447987.htm">沈虹宇老师</a></h4>
                 <p class="team-classic-status">Instructor</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".2s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="#"><img
+            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/f913335c7dec4b6ea55047094d4c9098.htm"><img
                   src="images/lijia.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="#">李佳老师</a></h4>
+                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/f913335c7dec4b6ea55047094d4c9098.htm">李佳老师</a></h4>
                 <p class="team-classic-status">Instructor</p>
               </div>
             </article>
@@ -887,10 +883,10 @@
             <!-- Quote Modern-->
             <article class="quote-modern quote-modern-custom">
               <div class="unit unit-spacing-md align-items-center">
-                <div class="unit-left"><a class="quote-modern-figure" href="#"><img class="img-circles"
+                <div class="unit-left"><a class="quote-modern-figure" href="https://steven-kid.github.io/"><img class="img-circles"
                       src="images/selfie/wangyuchao.jpg" alt="" width="100" height="100" /></a></div>
                 <div class="unit-body">
-                  <h4 class="quote-modern-cite"><a href="#">王昱超</a></h4>
+                  <h4 class="quote-modern-cite"><a href="https://steven-kid.github.io/">王昱超</a></h4>
                   <p class="quote-modern-status">WIki组</p>
                 </div>
               </div>
@@ -1050,7 +1046,7 @@
       <div class="timeline">
         <div class="timeline-item" data-text="2021.11.14 BNUZH-China 2021获得金牌：">
           <div class="timeline-content">
-            <img src="./images/timeline/golden 21.png" alt="" class="timeline-img">
+            <img src="./images/timeline/golden21.png" alt="" class="timeline-img">
             <h2 class="timeline-content-title">2021</h2>
             <p class="timeline-content-desc">
               BNUZH-China团队首次参赛夺金！获得2021iGEM比赛金牌！
@@ -1060,7 +1056,7 @@
 
         <div class="timeline-item" data-text="2022.10.28 BNUZH-China 2022获得金牌：">
           <div class="timeline-content">
-            <img src="./images/timeline/awards 22.png" alt="" class="timeline-img">
+            <img src="./images/timeline/awards22.png" alt="" class="timeline-img">
             <h2 class="timeline-content-title">2022</h2>
             <p class="timeline-content-desc">
               BNUZH-China在比赛中再创佳绩，斩获金牌。
