--- a/projects.html
+++ b/projects.html
@@ -79,24 +79,26 @@
 
   <body>
 <!-- Latest Projects-->
-    <section class="section section-sm section-fluid bg-default text-center side-space" id="projects">··
+    <section class="section section-sm section-fluid bg-default text-center side-space" id="projects">
         <div class="container-fluid">
           <h2 class="wow fadeInLeft">往年项目介绍</h2>
-          <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">BNUZ-China团队以大肠杆菌Nissle
-            1917为基盘生物，开发一种新型肠道定殖工程菌，此工程菌将原大肠杆菌代谢色氨酸产生吲哚的基因TnaA敲除，并过表达工程菌葡萄糖脱氢酶增 </p>
           <div class="isotope-filters isotope-filters-horizontal">
             <button
               class="isotope-filters-toggle button button-md button-icon button-icon-right button-default-outline button-wapasha"
               data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true"
               data-custom-toggle-disable-on-blur="true"><span class="icon fa fa-caret-down"></span>Filter</button>
             <ul class="isotope-filters-list" id="isotope-3">
-              <li><a class="active" href="#" data-isotope-filter="*" data-isotope-group="gallery">All</a></li>
-              <li><a href="#" data-isotope-filter="Type 1" data-isotope-group="gallery">2021</a></li>
-              <li><a href="#" data-isotope-filter="Type 2" data-isotope-group="gallery">2022</a></li>
+              <!-- <li><a class="active" href="#" data-isotope-filter="*" data-isotope-group="gallery">All</a></li> -->
+              <li><a class="active" href="#" data-isotope-filter="Type 1" style="font-size: 30px" data-isotope-group="gallery">2021</a></li>
+              <li><a href="#" data-isotope-filter="Type 2" style="font-size: 30px" data-isotope-group="gallery">2022</a></li>
             </ul>
           </div>
           <div class="row row-30 isotope" data-isotope-layout="fitRows" data-isotope-group="gallery"
             data-lightgallery="group">
+            <p class="side-space wow fadeInRight isotope-item" data-wow-delay=".0.5s" data-filter="Type 1">BNUZ-China团队以大肠杆菌Nissle
+              1917为基盘生物，开发一种新型肠道定殖工程菌，此工程菌将原大肠杆菌代谢色氨酸产生吲哚的基因TnaA敲除，并过表达工程菌葡萄糖脱氢酶增 </p>
+            <p class="side-space wow fadeInRight isotope-item" data-wow-delay=".0.5s" data-filter="Type 2">BNUZ-China团队以大肠杆菌Nissle
+                dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd </p>
             <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 1">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
