--- a/team.html
+++ b/team.html
@@ -79,10 +79,78 @@
 
   <body>
 
+    <section class="section section-sm section-fluid bg-default text-center" id="team">
+      <div class="container-fluid">
+        <h2>指导老师</h2>
+        <div class="row row-sm row-30 justify-content-center side-space">
+          <div class="col-md-6 col-lg-4 col-xl-4 wow fadeInRight" data-wow-delay=".3s">
+            <!-- Team Classic-->
+            <article class="team-classic"><a class="team-classic-figure" href="https://cls.bnu.edu.cn/xkjs/szdw/txjs/2839ecc7d47341f393cb8549c1ce0b0f.htm"><img
+                  src="images/zhanggenfa.jpg" alt="" width="420" height="424" /></a>
+              <div class="team-classic-caption">
+                <h4 class="team-classic-name"><a href="https://cls.bnu.edu.cn/xkjs/szdw/txjs/2839ecc7d47341f393cb8549c1ce0b0f.htm">张根发教授</a></h4>
+                <p class="team-classic-status">PI</p>
+              </div>
+            </article>
+          </div>
+          <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight">
+            <!-- Team Classic-->
+            <article class="team-classic"><a class="team-classic-figure" href="https://cls.bnu.edu.cn/xkjs/szdw/xrjs/jsjsjgjgcs/af7708bc2c42417fa22c49db3d5ca814.htm"><img
+                  src="images/xiangbenqiong.jpg" alt="" width="420" height="424" /></a>
+              <div class="team-classic-caption">
+                <h4 class="team-classic-name"><a href="https://cls.bnu.edu.cn/xkjs/szdw/xrjs/jsjsjgjgcs/af7708bc2c42417fa22c49db3d5ca814.htm">向本琼教授</a></h4>
+                <p class="team-classic-status">PI</p>
+              </div>
+            </article>
+          </div>
+          <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
+            <!-- Team Classic-->
+            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/xzgl/ecc9148873f24fc293277eba205d636c.htm"><img
+                  src="images/wangbo.jpg" alt="" width="420" height="424" /></a>
+              <div class="team-classic-caption">
+                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/xzgl/ecc9148873f24fc293277eba205d636c.htm">汪波老师</a></h4>
+                <p class="team-classic-status">Instructor</p>
+              </div>
+            </article>
+          </div>
+          <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".2s">
+            <!-- Team Classic-->
+            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/a3868b936c7e4608b5353fcf9e919aee.htm"><img
+                  src="images/ansainan.jpg" alt="" width="420" height="424" /></a>
+              <div class="team-classic-caption">
+                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/a3868b936c7e4608b5353fcf9e919aee.htm">安赛男老师</a></h4>
+                <p class="team-classic-status">Instructor</p>
+              </div>
+            </article>
+          </div>
+          <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".2s">
+            <!-- Team Classic-->
+            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/9fa21b209cad43b6953b14cd0f447987.htm"><img
+                  src="images/shenhongyu.jpg" alt="" width="420" height="424" /></a>
+              <div class="team-classic-caption">
+                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/9fa21b209cad43b6953b14cd0f447987.htm">沈虹宇老师</a></h4>
+                <p class="team-classic-status">Instructor</p>
+              </div>
+            </article>
+          </div>
+          <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".2s">
+            <!-- Team Classic-->
+            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/f913335c7dec4b6ea55047094d4c9098.htm"><img
+                  src="images/lijia.jpg" alt="" width="420" height="424" /></a>
+              <div class="team-classic-caption">
+                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/f913335c7dec4b6ea55047094d4c9098.htm">李佳老师</a></h4>
+                <p class="team-classic-status">Instructor</p>
+              </div>
+            </article>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
     <section class="section section-sm section-bottom-70 section-fluid bg-default text-center">
-      <h2>BNUZH-China 2023 成员介绍</h2>
       <div class="container-fluid">
+        <h2>BNUZH-China 2023 成员介绍</h2>
         <div class="row row-50 row-sm side-space">
           <div class="col-md-6 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
             <!-- Quote Modern-->
@@ -525,10 +593,10 @@
             <!-- Quote Modern-->
             <article class="quote-modern quote-modern-custom">
               <div class="unit unit-spacing-md align-items-center">
-                <div class="unit-left"><a class="quote-modern-figure" href="#"><img class="img-circles"
+                <div class="unit-left"><a class="quote-modern-figure" href="https://steven-kid.github.io/"><img class="img-circles"
                       src="images/selfie/wangyuchao.jpg" alt="" width="100" height="100" /></a></div>
                 <div class="unit-body">
-                  <h4 class="quote-modern-cite"><a href="#">王昱超</a></h4>
+                  <h4 class="quote-modern-cite"><a href="https://steven-kid.github.io/">王昱超</a></h4>
                   <p class="quote-modern-status">WIki组</p>
                 </div>
               </div>
