更改历史项目部分🐶

--- a/index.html
+++ b/index.html
@@ -37,12 +37,6 @@
 </head>
 
 <body>
-  <div class="preloader">
-    <div class="preloader-body">
-      <div class="cssload-container"><span></span><span></span><span></span><span></span>
-      </div>
-    </div>
-  </div>
   <div class="page">
     <div id="home">
       <!-- Page Header-->
@@ -74,7 +68,7 @@
                       <li class="rd-nav-item"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="./team.html">团队</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="./news.html">新闻</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="./contact us.html">联系我们</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="./contactus.html">联系我们</a></li>
 
                     </ul>
                   </div>
@@ -260,11 +254,11 @@
                   class="clients-classic" href="#"><img src="images/GOLD.png" alt="" width="270"
                     height="117" /></a></div> -->
               <div class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft" data-wow-delay=".2s"><a
-                  class="clients-classic" href="https://mp.weixin.qq.com/s/CFSC2y3eDUGbu48WDKiWiw"><img src="images/2021img.jpg" alt="" width="200"
-                    height="200" />2021团队</a></div>
+                  class="clients-classic text-center" href="https://2021.igem.org/Team:BNUZ-China"><img
+                    src="images/2021img.png" alt="" width="200" height="200" />2021团队</a></div>
               <div class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft" data-wow-delay=".3s"><a
-                  class="clients-classic" href="https://2022.igem.wiki/bnuzh-china/index.html"><img src="images/2022img.jpg" alt="" width="200"
-                    height="200" />2022团队</a></div>
+                  class="clients-classic text-center" href="https://2022.igem.wiki/bnuzh-china/index.html"><img
+                    src="images/2022img.jpg" alt="" width="200" height="200" />2022团队</a></div>
             </div>
           </div>
         </div>
@@ -304,67 +298,83 @@
         <div class="row row-sm row-30 justify-content-center side-space">
           <div class="col-md-6 col-lg-4 col-xl-4 wow fadeInRight" data-wow-delay=".3s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="https://cls.bnu.edu.cn/xkjs/szdw/txjs/2839ecc7d47341f393cb8549c1ce0b0f.htm"><img
+            <article class="team-classic"><a class="team-classic-figure"
+                href="https://cls.bnu.edu.cn/xkjs/szdw/txjs/2839ecc7d47341f393cb8549c1ce0b0f.htm"><img
                   src="images/zhanggenfa.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="https://cls.bnu.edu.cn/xkjs/szdw/txjs/2839ecc7d47341f393cb8549c1ce0b0f.htm">张根发教授</a></h4>
+                <h4 class="team-classic-name"><a
+                    href="https://cls.bnu.edu.cn/xkjs/szdw/txjs/2839ecc7d47341f393cb8549c1ce0b0f.htm">张根发教授</a></h4>
                 <p class="team-classic-status">PI</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="https://cls.bnu.edu.cn/xkjs/szdw/xrjs/jsjsjgjgcs/af7708bc2c42417fa22c49db3d5ca814.htm"><img
+            <article class="team-classic"><a class="team-classic-figure"
+                href="https://cls.bnu.edu.cn/xkjs/szdw/xrjs/jsjsjgjgcs/af7708bc2c42417fa22c49db3d5ca814.htm"><img
                   src="images/xiangbenqiong.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="https://cls.bnu.edu.cn/xkjs/szdw/xrjs/jsjsjgjgcs/af7708bc2c42417fa22c49db3d5ca814.htm">向本琼教授</a></h4>
+                <h4 class="team-classic-name"><a
+                    href="https://cls.bnu.edu.cn/xkjs/szdw/xrjs/jsjsjgjgcs/af7708bc2c42417fa22c49db3d5ca814.htm">向本琼教授</a>
+                </h4>
                 <p class="team-classic-status">PI</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/xzgl/ecc9148873f24fc293277eba205d636c.htm"><img
+            <article class="team-classic"><a class="team-classic-figure"
+                href="https://sczx.bnuzh.edu.cn/zxjj/szdw/xzgl/ecc9148873f24fc293277eba205d636c.htm"><img
                   src="images/wangbo.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/xzgl/ecc9148873f24fc293277eba205d636c.htm">汪波老师</a></h4>
+                <h4 class="team-classic-name"><a
+                    href="https://sczx.bnuzh.edu.cn/zxjj/szdw/xzgl/ecc9148873f24fc293277eba205d636c.htm">汪波老师</a></h4>
                 <p class="team-classic-status">Instructor</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".2s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/a3868b936c7e4608b5353fcf9e919aee.htm"><img
+            <article class="team-classic"><a class="team-classic-figure"
+                href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/a3868b936c7e4608b5353fcf9e919aee.htm"><img
                   src="images/ansainan.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/a3868b936c7e4608b5353fcf9e919aee.htm">安赛男老师</a></h4>
+                <h4 class="team-classic-name"><a
+                    href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/a3868b936c7e4608b5353fcf9e919aee.htm">安赛男老师</a>
+                </h4>
                 <p class="team-classic-status">Instructor</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".2s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/9fa21b209cad43b6953b14cd0f447987.htm"><img
+            <article class="team-classic"><a class="team-classic-figure"
+                href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/9fa21b209cad43b6953b14cd0f447987.htm"><img
                   src="images/shenhongyu.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/9fa21b209cad43b6953b14cd0f447987.htm">沈虹宇老师</a></h4>
+                <h4 class="team-classic-name"><a
+                    href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/9fa21b209cad43b6953b14cd0f447987.htm">沈虹宇老师</a>
+                </h4>
                 <p class="team-classic-status">Instructor</p>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-5 col-xl-4 wow fadeInRight" data-wow-delay=".2s">
             <!-- Team Classic-->
-            <article class="team-classic"><a class="team-classic-figure" href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/f913335c7dec4b6ea55047094d4c9098.htm"><img
+            <article class="team-classic"><a class="team-classic-figure"
+                href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/f913335c7dec4b6ea55047094d4c9098.htm"><img
                   src="images/lijia.jpg" alt="" width="420" height="424" /></a>
               <div class="team-classic-caption">
-                <h4 class="team-classic-name"><a href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/f913335c7dec4b6ea55047094d4c9098.htm">李佳老师</a></h4>
+                <h4 class="team-classic-name"><a
+                    href="https://sczx.bnuzh.edu.cn/zxjj/szdw/swsyjxzx_b39669c45bef411e83705df47f1d7f9a/xrjs_b39669c45bef411e83705df47f1d7f9a/jsg00_b39669c45bef411e83705df47f1d7f9a/f913335c7dec4b6ea55047094d4c9098.htm">李佳老师</a>
+                </h4>
                 <p class="team-classic-status">Instructor</p>
               </div>
             </article>
           </div>
 
         </div>
-      </div>
+      </div>  
     </section>
 
     <!-- You dream — we embody-->
@@ -883,8 +893,9 @@
             <!-- Quote Modern-->
             <article class="quote-modern quote-modern-custom">
               <div class="unit unit-spacing-md align-items-center">
-                <div class="unit-left"><a class="quote-modern-figure" href="https://steven-kid.github.io/"><img class="img-circles"
-                      src="images/selfie/wangyuchao.jpg" alt="" width="100" height="100" /></a></div>
+                <div class="unit-left"><a class="quote-modern-figure" href="https://steven-kid.github.io/"><img
+                      class="img-circles" src="images/selfie/wangyuchao.jpg" alt="" width="100" height="100" /></a>
+                </div>
                 <div class="unit-body">
                   <h4 class="quote-modern-cite"><a href="https://steven-kid.github.io/">王昱超</a></h4>
                   <p class="quote-modern-status">WIki组</p>
@@ -974,7 +985,8 @@
                 <div class="box-contacts-icon fl-bigmug-line-cellphone55"></div>
                 <div class="box-contacts-decor"></div>
                 <p class="box-contacts-link"><a href="https://mp.weixin.qq.com/s/VUgttYDNbrO3Aq87Wb54EQ">公众号</a></p>
-                <p class="box-contacts-link"><a href="https://mp.weixin.qq.com/s/VUgttYDNbrO3Aq87Wb54EQ">北师大 zh iGEM</a></p>
+                <p class="box-contacts-link"><a href="https://mp.weixin.qq.com/s/VUgttYDNbrO3Aq87Wb54EQ">北师大 zh iGEM</a>
+                </p>
               </div>
             </article>
           </div>
@@ -1162,6 +1174,9 @@
     <!-- Javascript-->
     <script src="./js/core.min.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/timeline.js"></script>
+    <script src="./js/gallery.js"></script>
+
     <!-- coded by Himic-->
 </body>
 
