添加首页按钮超链接，修复首页图片压缩问题🐼

--- a/projects.html
+++ b/projects.html
@@ -89,9 +89,8 @@
           data-custom-toggle-disable-on-blur="true"><span class="icon fa fa-caret-down"></span>Filter</button>
         <ul class="isotope-filters-list" id="isotope-3">
           <!-- <li><a class="active" href="#" data-isotope-filter="*" data-isotope-group="gallery">All</a></li> -->
-          <li><a class="active project-a" href="#" data-target="igem2021" style="font-size: 30px"
-              data-isotope-group="gallery">2021</a></li>
-          <li><a class = "project-a" href="#" data-target="igem2022" style="font-size: 30px" data-isotope-group="gallery">2022</a>
+          <li><a class="active project-a" href="#" data-target="igem2021" data-isotope-group="gallery">2021</a></li>
+          <li><a class = "project-a" href="#" data-target="igem2022" data-isotope-group="gallery">2022</a>
           </li>
         </ul>
       </div>
